@@ -1027,7 +1027,7 @@ SCIP_DECL_CONFLICTEXEC(conflictExecIndicator)
 #endif
 
          /* add constraint to SCIP */
-         SCIP_CALL( SCIPaddConflict(scip, node, cons, validnode, conftype, cutoffinvolved) );
+         SCIP_CALL( SCIPaddConflict(scip, node, &cons, validnode, conftype, cutoffinvolved) );
 
          *result = SCIP_CONSADDED;
       }
