@@ -81,6 +81,7 @@ Interface changes
 - new event mask SCIP_EVENTTYPE_GAPUPDATED for catching updates in primal or dual bound
 - added new sorting functions SCIPsortRealPtrPtr(), ...
 - the callback SCIP_DECL_READERWRITE is equipped with objoffset, objscale, objoffsetexact, objscaleexact as arguments 8 through 11 to write the exact objective offset and scale in exact mode
+- the argument cons in SCIPaddConflict has a double pointer now, since the constraint is released
 
 ### Deleted and changed API methods
 
